  insensitive file systems like HFS, mv would just remove a hardlinked 'file'
  if called like `mv file File`.  The feature was added in coreutils-5.0.1.

  tee will exit early if there are no more writable outputs.

  tee does not treat the file operand '-' as meaning standard output any longer,
  for better conformance to POSIX.  This feature was added in coreutils-5.3.0.


** Improvements

  cp,install,mv will convert smaller runs of NULs in the input to holes,
  and cp --sparse=always avoids speculative preallocation on XFS for example.

  cp will read sparse files more efficiently when the destination is a
  non regular file.  For example when copying a disk image to a device node.

  mv will try a reflink before falling back to a standard copy, which is
  more efficient when moving files across BTRFS subvolume boundaries.

  stat and tail now know about IBRIX.  stat -f --format=%T now reports the file
  system type, and tail -f uses polling for files on IBRIX file systems.

  wc -l processes short lines much more efficiently.

  References from --help and the man pages of utilities have been corrected
  in various cases, and more direct links to the corresponding online
  documentation are provided.


* Noteworthy changes in release 8.23 (2014-07-18) [stable]

** Bug fixes

  chmod -Rc no longer issues erroneous warnings for files with special bits set.
  [bug introduced in coreutils-6.0]

  cp -a, mv, and install --preserve-context, once again set the correct SELinux
  context for existing directories in the destination.  Previously they set
  the context of an existing directory to that of its last copied descendent.
  [bug introduced in coreutils-8.22]

  cp -a, mv, and install --preserve-context, no longer seg fault when running
  with SELinux enabled, when copying from file systems that return an error
  when reading the SELinux context for a file.
  [bug introduced in coreutils-8.22]
